# ScreenRecorder-vala

./: .gitmodules  ScreenRec.sublime-project  configure.ac  org.gnome.Screenrec.json
src/: Makefile.am  main.vala
src/audio/: pulse.vala
src/config/: config.vala  config_audio.vala  config_buttons.vala  config_recording.vala  config_streaming.vala  configfile.vala
src/gst_bins/: audio_encoder_bin.vala  audio_recorder_bin.vala  gst_debug.vala  manual_routing_interface.vala  muxer_bin.vala  playback_bin.vala  screen_recorder_bin.vala  video_encoder_bin.vala
src/gui/: main_window.vala  mjpeg_pipe_window.vala  playback_window.vala  player_window.vala  rtmp_window.vala  settings_window.vala  v4l2_window.vala
src/gui/settings/: button_settings.vala  recording_settings.vala  sound_settings.vala  tools.vala
